# Vibli

./: .clangd  .gitignore  CMakeLists.txt  CMakePresets.json  README.md  RELEASE.md
installer/: vibli_setup.iss  vibli_setup.iss.in
resources/: app.rc  resources.qrc
src/: main.cpp  version.h.in
src/core/: AudioPlayer.cpp  AudioPlayer.h  LogService.h  MediaCache.cpp  MediaCache.h  PlaylistImporter.cpp  PlaylistImporter.h  PlaylistManager.cpp  PlaylistManager.h  PlaylistPersistence.cpp  PlaylistPersistence.h  ProgressiveDownloader.cpp  ProgressiveDownloader.h  ThumbnailCache.cpp  ThumbnailCache.h  YtDlpService.cpp  YtDlpService.h
src/tray/: TrayManager.cpp  TrayManager.h
src/ui/: BufferedSeekSlider.cpp  BufferedSeekSlider.h  DownloadManagerDialog.cpp  DownloadManagerDialog.h  IconFont.h  LoadingOverlay.cpp  LoadingOverlay.h  LogViewerDialog.cpp  LogViewerDialog.h  MainWindow.cpp  MainWindow.h  MiniPlayer.cpp  MiniPlayer.h  OverlayWidget.cpp  OverlayWidget.h  PlaylistDelegate.cpp  PlaylistDelegate.h  PlaylistImportDialog.cpp  PlaylistImportDialog.h  PlaylistModel.cpp  PlaylistModel.h  RoundedImageWidget.h  VideoThumbnail.cpp  VideoThumbnail.h
tests/: LogServiceStub.cpp  tst_bug_condition.cpp
tools/: Release.ps1  RunBuildRelease.ps1
